--- a/client/src/components/Sidebar.scss
+++ b/client/src/components/Sidebar.scss
@@ -1,31 +1,49 @@
-$Shades-of-royal-blue--navy-1-hex: #000FBF;
-$bg: #000A80;
-$btn: #0015FF;
-$dark: #000540;
-$Shades-of-royal-blue--navy-5-hex: #0013E6;
-
 .sidebar {
 	box-shadow: 2px 0 2px 0 rgba(0,0,0,.1);
-	background-color: #fff;
+	background-color: #ffffff;
 	max-width: 352px;
 	width: 100%;
 	height: 100vh;
 	z-index: 2;
 
 	&__header {
-		background-color: $dark;
-		padding: 50px 20px;
+		background-color: #ffffff;
+		padding: 20px 20px;
 	}
 
 	&__search {
 		border-radius: 5px;
 		background-color: #ffffff;
 		padding: 5px 15px;
+		border: 1px solid rgba(#000000, .2);
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
 	}
 
 	&__input {
 		border: none;
 		width: 100%;
 		padding: 5px 0;
+	}
+
+	&__button {
+		border: none;
+		outline: none;
+		cursor: pointer;
+		background-color: transparent;
+		margin: 0;
+		padding: 0;
+
+		&--search {
+			width: 16px;
+			height: 16px;
+
+			img {
+				width: inherit;
+				height: inherit;
+				opacity: 0.5;
+			}
+		}
 	}
 }
