--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -1,4 +1,5 @@
 @import "vars";
+@import "fonts";
 
 * {
 	box-sizing: border-box;
@@ -25,7 +26,7 @@ body {
 	min-width: 320px;
 	position: relative;
 	line-height: 1.65;
-	//font-family: 'Roboto';
+	font-family: 'Roboto', sans-serif;
 	overflow-x: hidden;
 	color: $text;
 	input, textarea {
