--- a/client/src/components/Sidebar.scss
+++ b/client/src/components/Sidebar.scss
@@ -5,20 +5,53 @@
 	width: 100%;
 	height: 100vh;
 	z-index: 2;
+	position: relative;
+	//overflow: hidden;
 
-	&__header {
-		background-color: #ffffff;
-		padding: 20px 20px;
+	img, svg {
+		max-width: 100%;
 	}
 
-	&__search {
+	&__wrapper {
+		max-height: 100%;
+		height: 100%;
+	}
+
+	&__header {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		margin: 20px 20px;
+		display: flex;
+		align-items: center;
+		max-width: 100%;
 		border-radius: 5px;
 		background-color: #ffffff;
 		padding: 5px 15px;
 		border: 1px solid rgba(#000000, .2);
+	}
+
+	&__panel {
+		overflow-y: scroll;
+		height: 100%;
+		max-height: 100%;
+
+		& > * {
+			margin-top: 76px;
+		}
+	}
+
+	&__filter {
+		margin-left: 12px;
+		display: flex;
+	}
+
+	&__search {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		width: 100%;
 	}
 
 	&__input {
@@ -34,6 +67,20 @@
 		background-color: transparent;
 		margin: 0;
 		padding: 0;
+
+		&--filter {
+			width: 24px;
+			height: 24px;
+			padding: 0;
+			background-color: transparent;
+			border: none;
+			outline: none;
+			cursor: pointer;
+
+			svg {
+				fill: rgba(0, 0, 0, 0.4);
+			}
+		}
 
 		&--search {
 			width: 16px;
