--- a/client/src/components/Sidebar.scss
+++ b/client/src/components/Sidebar.scss
@@ -27,19 +27,32 @@
 		align-items: center;
 		max-width: 100%;
 		padding: 5px 15px;
+		z-index: 10;
 
 		&--fixed {
 			box-shadow: none;
 		}
 	}
 
+	&__scrollbar {
+		position: absolute;
+		right: 0;
+		height: 100%;
+		top: 0;
+		width: 7px;
+		background-color: rgba(#000000, .2);
+	}
+
 	&__panel {
 		overflow-y: scroll;
 		height: 100%;
 		max-height: 100%;
+		padding-top: 105px;
+		-ms-overflow-style: none;
+		scrollbar-width: none;
 
-		& > * {
-			margin-top: 105px;
+		&::-webkit-scrollbar {
+			display: none;
 		}
 	}
 
@@ -106,5 +119,19 @@
 				opacity: 0.5;
 			}
 		}
+	}
+}
+
+.scrollbar {
+	
+	&__slider {
+		position: absolute;
+		left: 0;
+		right: 0;
+		width: 100%;
+		background-color: rgba(#0000, .6);
+		//fix
+		height: 100px;
+		cursor: grab;
 	}
 }
