--- a/client/src/components/Sidebar.scss
+++ b/client/src/components/Sidebar.scss
@@ -34,15 +34,6 @@
 		}
 	}
 
-	&__scrollbar {
-		position: absolute;
-		right: 0;
-		height: 100%;
-		top: 0;
-		width: 7px;
-		background-color: rgba(#000000, .2);
-	}
-
 	&__panel {
 		overflow-y: scroll;
 		height: 100%;
@@ -52,7 +43,8 @@
 		scrollbar-width: none;
 
 		&::-webkit-scrollbar {
-			display: none;
+			//Uncommend
+			//display: none;
 		}
 	}
 
@@ -119,19 +111,5 @@
 				opacity: 0.5;
 			}
 		}
-	}
-}
-
-.scrollbar {
-	
-	&__slider {
-		position: absolute;
-		left: 0;
-		right: 0;
-		width: 100%;
-		background-color: rgba(#0000, .6);
-		//fix
-		height: 100px;
-		cursor: grab;
 	}
 }
