Mobile version - sidebar

--- a/client/src/components/SearchFilter.scss
+++ b/client/src/components/SearchFilter.scss
@@ -16,3 +16,10 @@
 		margin-left: 5px;
 	}
 }
+
+@media only screen and (max-width: 768px) {
+	.search-filter  {
+		left: 15px;
+		top: 80px;
+	}
+}
