--- a/client/src/components/Sidebar.scss
+++ b/client/src/components/Sidebar.scss
@@ -6,7 +6,8 @@
 	height: 100vh;
 	z-index: 2;
 	position: relative;
-	overflow: hidden;
+	transition: .3s;
+	transform: translateX(0);
 
 	img, svg {
 		max-width: 100%;
@@ -15,6 +16,7 @@
 	&__wrapper {
 		max-height: 100%;
 		height: 100%;
+		overflow: hidden;
 	}
 
 	&__header {
@@ -68,6 +70,40 @@
 		display: flex;
 		align-items: center;
 	}
+	
+	&__toggle-button {
+		background-color: rgba(0, 0, 0, .8);
+		border: none;
+		border-radius: 5px;
+		position: absolute;
+		width: 25px;
+		height: 35px;
+		padding: 5px 5px;
+		margin: 0;
+		top: 10px;
+		right: -10px;
+		transform: translateX(100%);
+		z-index: 2;
+		cursor: pointer;
+		display: none;
+
+		&:before {
+			transition: .2s;
+			content: "";
+			width: 2px;
+			height: 5px;
+			position: absolute;
+			left: 9px;
+			top: 10px;
+			border: 7px solid transparent;
+			border-left: 7px solid rgba(#ffffff, .8);
+			transform: rotate(0);
+		}
+
+		&--active {
+			//Активныу часть ToDo - исправить
+		}
+	}
 
 	&__button {
 		border: none;
@@ -110,5 +146,25 @@
 				opacity: 0.5;
 			}
 		}
+	}
+}
+
+@media only screen and (max-width: 768px) {
+	.sidebar {
+		position: fixed;
+
+		&--hidden {
+			transform: translateX(-100%);
+		}
+
+		&__toggle-button {
+			display: block;
+		}
+	}
+}
+
+@media only screen and (max-width: 425px) {
+	.sidebar {
+		max-width: 270px;
 	}
 }
