--- a/client/src/components/SearchFilter.scss
+++ b/client/src/components/SearchFilter.scss
@@ -15,6 +15,12 @@
 	&__label {
 		margin-left: 5px;
 	}
+
+	&__title {
+		font-size: 16px;
+		margin-top: 0;
+		margin-bottom: 10px;
+	}
 }
 
 @media only screen and (max-width: 768px) {
