--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -70,6 +70,14 @@ body {
 	}
 }
 
+.flex {
+	display: flex;
+
+	&--between {
+		justify-content: space-between;
+	}
+}
+
 /*
 @include media-breakpoint-down(md) {
 }
