--- a/client/src/components/ReportPanel.scss
+++ b/client/src/components/ReportPanel.scss
@@ -1,24 +1,54 @@
 .report-panel {
 	background-color: #ffffff;
 	position: fixed;
+	overflow: hidden;
 	top: 30px;
 	right: 20px;
 	border-radius: 8px;
+	max-width: 640px;
+	width: 100%;
 
 	&__wrapper {
-		padding: 20px;
 		display: flex;
 		flex-direction: column;
 
 		&:last-of-type {
-			margin-bottom: 20px;
+			margin-bottom: 0;
 			border-bottom: none;
 		}
 	}
 
-	&__title {
-		margin-bottom: 15px;
-		font-size: 18px;
+	&__collapsible {
+		padding: 0;
+		margin: 0;
+		border: none;
+		box-shadow: none;
+	}
+
+	&__collapsible-item {
+
+		&:last-of-type {
+
+			.collapsible-body {
+				border-bottom: none;
+			}
+		}
+
+		&.active {
+
+			.collapsible-header {
+				border-bottom: none;
+			}
+		}
+
+		.collapsible-header {
+			font-size: 18px;
+			padding: 20px 30px;
+		}
+
+		.collapsible-body {
+			padding: 20px 30px;
+		}
 	}
 
 	&__button {
@@ -38,7 +68,11 @@
 		margin-left: 5px;
 	}
 
-	&__controls {
-		padding: 0 20px 20px 20px;
+	&__block {
+
+
+		&--half {
+			width: 48%;
+		}
 	}
 }
