--- a/client/src/components/Sidebar.scss
+++ b/client/src/components/Sidebar.scss
@@ -70,6 +70,14 @@
 		display: flex;
 		align-items: center;
 	}
+
+	&__loader {
+		width: 100%;
+		height: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
 	
 	&__toggle-button {
 		background-color: rgba(0, 0, 0, .8);
