--- a/client/src/components/SingleView.scss
+++ b/client/src/components/SingleView.scss
@@ -18,6 +18,14 @@
 		line-height: 16px;
 	}
 
+	&__loader {
+		width: 100%;
+		height: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
 	&__button {
 		border: none;
 		background-color: transparent;
