--- a/client/src/components/ReportPanel.scss
+++ b/client/src/components/ReportPanel.scss
@@ -11,7 +11,7 @@
 	&__wrapper {
 		display: flex;
 		flex-direction: column;
-		margin-bottom: 30px;
+		margin-bottom: 20px;
 
 		&:last-of-type {
 			margin-bottom: 0;
@@ -33,6 +33,13 @@
 	}
 
 	&__collapsible-item {
+
+		&--prepared {
+
+			.input-field {
+				margin-top: 0;
+			}
+		}
 
 		&:last-of-type {
 
@@ -85,6 +92,13 @@
 
 		&--half {
 			width: 48%;
+		}
+
+		&--wrap {
+			.input-field {
+				margin-top: 10px;
+				margin-bottom: 0;
+			}
 		}
 
 		[type="checkbox"]+span:not(.lever) {
