--- a/client/src/components/ReportPanel.scss
+++ b/client/src/components/ReportPanel.scss
@@ -88,6 +88,16 @@
 		margin-left: 5px;
 	}
 
+	&__button {
+		min-height: 40px;
+		height: auto;
+		line-height: 1.6;
+
+		&--close {
+			display: none;
+		}
+	}
+
 	&__block {
 
 		&--half {
@@ -103,6 +113,72 @@
 
 		[type="checkbox"]+span:not(.lever) {
 			line-height: 130%;
+		}
+	}
+}
+
+@media only screen and (max-width: 768px) {
+	.report-panel {
+		max-width: 100%;
+		width: auto;
+		top: 10px;
+		left: 10px;
+		right: 10px;
+		z-index: 2;
+		overflow-y: auto;
+		height: auto;
+		max-height: 97%;
+
+		&__controls {
+			margin-bottom: 10px;
+		}
+
+		&__button {
+
+			&--close {
+				margin-left: 10px;
+				display: inline-block;
+			}
+		}
+	}
+}
+
+@media only screen and (max-width: 425px) {
+	.report-panel {
+
+		&__collapsible-item {
+
+			.collapsible-header {
+				padding: 15px 20px;
+			}
+
+			.collapsible-body {
+				padding: 10px 20px;
+			}
+		}
+
+		&__block {
+
+			&--half {
+				width: 100%;
+			}
+
+			&--mobile-width {
+				flex-direction: column;
+			}
+		}
+
+		&__control {
+			width: 100%;
+		}
+
+		&__button {
+			font-size: 12px;
+
+			&--close {
+				margin-top: 10px;
+				margin-left: 0;
+			}
 		}
 	}
 }
