--- a/client/src/components/ReportView.scss
+++ b/client/src/components/ReportView.scss
@@ -57,6 +57,96 @@
 			height: auto;
 		}
 	}
+}
 
 
+@media only screen and (max-width: 768px) {
+	.report-view {
+
+		&__modal {
+			top: 50px;
+			max-height: 80%;
+			max-width: 95%;
+		}
+
+		&__wrapper {
+
+			thead {
+				display: none;
+			}
+
+			tr {
+				display: block;
+				margin-bottom: 15px;
+				border: 1px solid #ccc;
+
+				&:last-of-type {
+					margin-bottom: 0;
+				}
+			}
+
+			td {
+				display: block;
+				text-align: right;
+				font-size: 15px;
+				border-bottom: 1px dotted #ccc;
+				padding: 15px;
+
+				&:last-of-type {
+					border-bottom: none;
+				}
+
+				&:before {
+					content: attr(data-label);
+					float: left;
+					text-transform: uppercase;
+					font-weight: bold;
+				}
+			}
+		}
+	}
+}
+
+@media only screen and (max-width: 425px) {
+	.report-view {
+
+		&__button {
+
+			&--footer {
+				width: 100%;
+			}
+		}
+
+		&__title {
+			font-size: 24px;
+			margin-bottom: 10px;
+		}
+
+		&__modal {
+			top: 2% !important;
+			max-height: 96%;
+
+			&.modal-fixed-footer .modal-content {
+				padding: 10px;
+				height: calc(100% - 147px);
+			}
+
+			.modal-footer {
+				display: flex;
+				flex-wrap: wrap;
+				padding: 10px;
+
+				.btn {
+					margin: 3px 0;
+				}
+			}
+		}
+
+		&__wrapper {
+
+			td {
+				font-size: 12px;
+			}
+		}
+	}
 }
