--- a/views/report.ejs
+++ b/views/report.ejs
@@ -9,6 +9,10 @@
             box-sizing: border-box;
         }
 
+        body, html {
+            width: 100%;
+        }
+
         .document__title {
             margin: 0;
             font-size: 24px;
@@ -117,6 +121,12 @@
     </Table>
 
 </div>
+
+<script type="text/javascript">
+  document.write ('<div>');
+  document.write (window.innerWidth);
+  document.write ('<\/div>');
+</script>
 
 </body>
 <html>
