--- a/client/src/components/SearchView.scss
+++ b/client/src/components/SearchView.scss
@@ -1,6 +1,7 @@
 .search-view {
 	display: flex;
 	justify-content: space-between;
+	position: relative;
 	padding: 20px;
 	transition: .3s;
 	background-color: #ffffff;
