--- a/client/src/components/Maps.scss
+++ b/client/src/components/Maps.scss
@@ -3,14 +3,22 @@
 	width: 100%;
 	position: relative;
 	height: 100vh;
-}
 
-.y-map {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
+	&__preloader {
+		width: 100%;
+		height: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
+	.y-map {
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+	}
 }
