--- a/client/src/components/Sidebar.scss
+++ b/client/src/components/Sidebar.scss
@@ -74,9 +74,7 @@
 	&__loader {
 		width: 100%;
 		height: 100%;
-		display: flex;
-		align-items: center;
-		justify-content: center;
+		overflow: hidden;
 	}
 	
 	&__toggle-button {
