--- a/client/src/components/SearchFilter.scss
+++ b/client/src/components/SearchFilter.scss
@@ -26,6 +26,50 @@
 	&--hidden {
 		display: none;
 	}
+
+	&.inline {
+		min-width: 100%;
+		position: relative;
+		top: 0;
+		box-shadow: none;
+	}
+}
+
+.inline {
+
+	.search-filter {
+
+		&__block {
+			margin-right: 10px;
+
+			&:last-of-type {
+				margin-right: 0;
+			}
+
+			&--years {
+				display: flex;
+
+				& > div {
+					margin-right: 10px;
+					margin-top: 0;
+					margin-bottom: 0;
+
+					&:last-of-type {
+						margin-right: 0;
+					}
+				}
+			}
+		}
+
+		&__flex {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			justify-content: space-between;
+			width: 100%;
+			max-width: 900px;
+		}
+	}
 }
 
 @media only screen and (max-width: 768px) {
