--- a/client/src/pages/ViewPage.scss
+++ b/client/src/pages/ViewPage.scss
@@ -6,6 +6,23 @@
 		margin-top: 80px;
 	}
 
+	&__reports {
+		background-color: rgba(#000000, .5);
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: 2;
+		height: 100%;
+		width: 100%;
+	}
+
+	&__report-panel {
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		z-index: 3;
+	}
+
 	.table-container {
 		margin: 80px auto 80px auto;
 	}
