--- a/client/src/components/InlineGallery.scss
+++ b/client/src/components/InlineGallery.scss
@@ -2,18 +2,28 @@
 
 	&__wrapper {
 		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
 	}
 
 	&__slide {
-		width: 400px;
+		width: 350px;
 		height: 200px;
+		max-width: 24%;
 		overflow: hidden;
 		cursor: pointer;
 		position: relative;
 
 		img {
-			max-width: 100%;
-			max-height: 100%;
+			position: absolute;
+			min-width: auto;
+			min-height: auto;
+			height: 100%;
+			width: 100%;
+			object-fit: cover;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
 		}
 
 		&:after {
@@ -28,6 +38,7 @@
 			bottom: 0;
 			background-color: rgba(#000000, .5);
 			transition: .3s;
+			pointer-events: none;
 		}
 
 		&:focus,
@@ -35,6 +46,47 @@
 
 			&:after {
 				opacity: 1;
+			}
+		}
+
+		&--skeleton {
+			background-color: #f1f1f1;
+			position: relative;
+			margin-top: 4px;
+			margin-bottom: 7px;
+			color: transparent;
+			font-size: 0;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+
+			&:before {
+				content: "";
+				position: absolute;
+				height: 100%;
+				right: 0;
+				bottom: 0;
+				top: 0;
+				left: 0;
+				transform: translateX(-100%);
+				background-image: linear-gradient(
+												90deg,
+												rgba(#fff, 0) 0,
+												rgba(#fff, 0.2) 20%,
+												rgba(#fff, 0.5) 60%,
+												rgba(#fff, 0)
+				);
+				animation: shine 2s infinite;
+			}
+
+			&--add {
+
+			}
+
+			@keyframes shine {
+				100% {
+					transform: translateX(100%);
+				}
 			}
 		}
 	}
