--- a/client/src/pages/EditPage.scss
+++ b/client/src/pages/EditPage.scss
@@ -12,6 +12,27 @@
 		margin-bottom: 30px;
 	}
 
+	&__coordinates {
+		position: absolute;
+		height: 100%;
+		top: 0;
+		right: 0;
+		width: 20%;
+		z-index: 2;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: rgba(#ffffff, .6);
+	}
+
+	&__coordinate {
+		margin-bottom: 50px;
+
+		&:last-of-type {
+			margin-bottom: 0;
+		}
+	}
+
 	&__button {
 		margin-right: 5px;
 
@@ -31,7 +52,10 @@
 	}
 
 	&__map {
+		height: 300px;
 		margin: 20px 0;
+		position: relative;
+		display: flex;
 	}
 
 	&__info {
@@ -112,7 +136,6 @@
 		margin-right: 5px;
 	}
 
-	&__map,
 	&__y-map {
 		width: 100%;
 		height: 300px;
