--- a/client/src/components/InlineGallery.scss
+++ b/client/src/components/InlineGallery.scss
@@ -15,10 +15,15 @@
 		width: 350px;
 		height: 200px;
 		max-width: 24%;
+		margin-right: 1.33%;
 		overflow: hidden;
 		cursor: pointer;
 		position: relative;
 		margin-bottom: 20px;
+
+		&:nth-child(4n) {
+			margin-right: 0;
+		}
 
 		img {
 			position: absolute;
@@ -30,29 +35,6 @@
 			top: 50%;
 			left: 50%;
 			transform: translate(-50%, -50%);
-		}
-
-		&:after {
-			content: "";
-			opacity: 0;
-			position: absolute;
-			height: 100%;
-			width: 100%;
-			left: 0;
-			right: 0;
-			top: 0;
-			bottom: 0;
-			background-color: rgba(#000000, .5);
-			transition: .3s;
-			pointer-events: none;
-		}
-
-		&:focus,
-		&:hover {
-
-			&:after {
-				opacity: 1;
-			}
 		}
 
 		&--skeleton {
@@ -89,6 +71,90 @@
 				100% {
 					transform: translateX(100%);
 				}
+			}
+		}
+	}
+}
+
+.gallery-item {
+	position: relative;
+
+	&:focus,
+	&:hover {
+
+		.gallery-item {
+
+			&__preview {
+				opacity: 1;
+				pointer-events: auto;
+			}
+		}
+	}
+
+	&__modal {
+		max-width: 800px;
+	}
+
+	&__img-wrapper {
+		margin: auto;
+		max-width: 400px;
+
+		img {
+			max-width: 100%;
+		}
+	}
+
+	&__preview {
+		opacity: 0;
+		pointer-events: none;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(#000000, .5);
+		transition: .3s;
+		color: #ffffff;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		cursor: pointer;
+	}
+
+	&__button {
+		margin-right: 10px;
+		border: 1px solid transparent;
+		background-color: transparent;
+		color: inherit;
+		border-radius: 50%;
+		height: 50px;
+		width: 50px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		cursor: pointer;
+		transition: .3s;
+
+		&:focus,
+		&:hover {
+			background-color: #84c7c1;
+		}
+
+		&:last-of-type {
+			margin-right: 0;
+		}
+	}
+
+	&--edit {
+
+		.gallery-item {
+
+			&__preview {
+				cursor: default;
+			}
+
+			&__button {
+				border: 1px solid #ffffff;
 			}
 		}
 	}
