--- a/client/src/components/InlineGallery.scss
+++ b/client/src/components/InlineGallery.scss
@@ -75,3 +75,40 @@
 		}
 	}
 }
+
+@media only screen and (max-width: 1280px) {
+	.inline-gallery {
+
+		&__slide {
+			max-width: 32%;
+		}
+	}
+}
+
+@media only screen and (max-width: 768px) {
+	.inline-gallery {
+
+		&__slide {
+			max-width: 48%;
+		}
+	}
+}
+
+@media only screen and (max-width: 425px) {
+	.inline-gallery {
+
+		&__wrapper {
+			justify-content: center;
+
+			&:after {
+				flex: none;
+			}
+		}
+
+		&__slide {
+			max-width: 100%;
+			margin-right: 0;
+			width: 100%;
+		}
+	}
+}
