--- a/client/src/components/PageHeader.scss
+++ b/client/src/components/PageHeader.scss
@@ -11,12 +11,19 @@
 	}
 
 	&__controls {
-		margin-top: 50px;
-		margin-bottom: 50px;
+		margin: 50px 0;
+
+		a {
+			vertical-align: middle;
+		}
 	}
 
 	&__control {
 		margin-right: 10px;
+		margin-bottom: 10px;
+		line-height: 36px;
+		height: 36px;
+		display: inline-block;
 	}
 
 	&__search-filter {
@@ -24,5 +31,45 @@
 		right: 0;
 		left: auto;
 		top: 50px;
+	}
+}
+
+@media only screen and (max-width: 768px) {
+	.page-header  {
+
+		&__controls {
+			margin: 30px 0;
+		}
+	}
+}
+
+@media only screen and (max-width: 425px) {
+	.page-header {
+
+		&__title {
+			font-size: 26px;
+		}
+
+		&__subtitle {
+			font-size: 14px;
+			margin: 12px 0 6px 0;
+		}
+
+		&__controls {
+			margin: 15px 0px;
+		}
+
+		&__search {
+			margin-top: 40px;
+		}
+
+		&__control {
+			display: block;
+			width: 100%;
+
+			& > button {
+				width: 100%;
+			}
+		}
 	}
 }
