--- a/client/src/components/ReportView.scss
+++ b/client/src/components/ReportView.scss
@@ -59,7 +59,6 @@
 	}
 }
 
-
 @media only screen and (max-width: 768px) {
 	.report-view {
 
@@ -101,6 +100,7 @@
 					float: left;
 					text-transform: uppercase;
 					font-weight: bold;
+					margin-right: 20px;
 				}
 			}
 		}
