--- a/client/src/components/SearchFilter.scss
+++ b/client/src/components/SearchFilter.scss
@@ -74,8 +74,21 @@
 }
 
 @media only screen and (max-width: 768px) {
-	.search-filter  {
-		left: 15px;
-		top: 80px;
+	.inline {
+
+		.search-filter {
+
+			&__flex {
+				flex-wrap: wrap;
+			}
+
+			&__block {
+				margin-bottom: 15px;
+
+				&--years {
+					width: 100%;
+				}
+			}
+		}
 	}
 }
