--- a/client/src/components/TableView.scss
+++ b/client/src/components/TableView.scss
@@ -14,3 +14,38 @@
 		}
 	}
 }
+
+@media only screen and (max-width: 768px) {
+	.table-view {
+
+		thead {
+			display: none;
+		}
+
+		tr {
+			display: block;
+			margin-bottom: 15px;
+			border: 1px solid #ccc;
+		}
+
+		td {
+			display: block;
+			text-align: right;
+			font-size: 15px;
+			border-bottom: 1px dotted #ccc;
+			padding: 15px;
+
+			&:before {
+				content: attr(data-label);
+				float: left;
+				text-transform: uppercase;
+				font-weight: bold;
+				margin-right: 20px;
+			}
+		}
+	}
+}
+
+@media only screen and (max-width: 425px) {
+
+}
