--- a/client/src/pages/DetailPage.scss
+++ b/client/src/pages/DetailPage.scss
@@ -113,3 +113,30 @@
 		height: 300px;
 	}
 }
+
+
+@media only screen and (max-width: 425px) {
+	.detail {
+		font-size: 14px;
+
+		&__button {
+			font-size: 12px;
+		}
+
+		&__info {
+			margin: 10px 0;
+		}
+
+		&__gallery {
+			margin: 20px 0 0 0;
+		}
+
+		&__wrapper {
+			padding: 15px 0;
+		}
+
+		&__title {
+			font-size: 18px;
+		}
+	}
+}
