--- a/client/src/pages/EditPage.scss
+++ b/client/src/pages/EditPage.scss
@@ -17,7 +17,7 @@
 		height: 100%;
 		top: 0;
 		right: 0;
-		width: 20%;
+		width: 30%;
 		z-index: 2;
 		display: flex;
 		justify-content: center;
@@ -139,5 +139,41 @@
 	&__y-map {
 		width: 100%;
 		height: 300px;
+	}
+}
+
+@media only screen and (max-width: 768px) {
+	.edit {
+
+		&__block {
+			max-width: 100%;
+
+			&--small {
+				max-width: 50%;
+				margin-bottom: 20px;
+			}
+		}
+
+		&__coordinates {
+			width: 40%;
+		}
+	}
+}
+
+@media only screen and (max-width: 425px) {
+	.edit {
+		font-size: 14px;
+
+		&__button {
+			font-size: 12px;
+		}
+
+		&__wrapper {
+			padding: 15px 0;
+		}
+
+		&__title {
+			font-size: 18px;
+		}
 	}
 }
