--- a/client/src/pages/AdminPage.scss
+++ b/client/src/pages/AdminPage.scss
@@ -16,10 +16,12 @@
 	&__wrapper {
 		display: flex;
 		justify-content: space-between;
+		flex-wrap: wrap;
 	}
 
 	&__block {
-		max-width: 48%;
+		max-width: 47%;
 		width: 100%;
+		margin-bottom: 80px;
 	}
 }
