--- a/client/src/components/AdminPageComponents/Location.scss
+++ b/client/src/components/AdminPageComponents/Location.scss
@@ -100,3 +100,16 @@
 	}
 
 }
+
+@media only screen and (max-width: 768px) {
+	.location-modal {
+
+		&__header {
+			display: block;
+		}
+
+		&__title {
+			margin: 0 0 20px 0;
+		}
+	}
+}
