--- a/client/src/components/Navigation.scss
+++ b/client/src/components/Navigation.scss
@@ -1,5 +1,8 @@
 .navigation {
-	z-index: 2;
+
+	&__wrapper {
+		z-index: 2;
+	}
 
 	&__nav {
 		position: absolute;
@@ -12,6 +15,84 @@
 		&--bottom {
 			bottom: 30px;
 			right: 20px;
+		}
+	}
+
+	&__close {
+		display: none;
+		position: fixed;
+		top: 21px;
+		right: 20px;
+		z-index: 4;
+		height: 12px;
+	}
+
+	&__button {
+
+		&--close {
+			background-color: transparent;
+			border: none;
+			position: relative;
+			height: 12px;
+			width: 30px;
+			padding: 0;
+
+			&:hover,
+			&:focus {
+				background-color: transparent;
+			}
+
+			span {
+				width: inherit;
+				height: 2px;
+				background-color: #000000;
+				display: block;
+				position: absolute;
+				left: 0;
+				right: 0;
+				top: 50%;
+				transform: translateY(-50%);
+				transition: .1s;
+
+				&:before,
+				&:after {
+					content: "";
+					background-color: #000000;
+					display: block;
+					position: absolute;
+					right: 0;
+					width: inherit;
+					height: inherit;
+					transform-origin: center;
+					transition: .2s;
+				}
+
+				&:before {
+					top: -7px;
+				}
+
+				&:after {
+					bottom: -7px;
+				}
+			}
+		}
+
+		&--active {
+			background-color: transparent;
+
+			span {
+				background-color: transparent;
+
+				&:before {
+					top: 0;
+					transform: rotate(-45deg);
+				}
+
+				&:after {
+					bottom: 0;
+					transform: rotate(45deg);
+				}
+			}
 		}
 	}
 
@@ -31,28 +112,46 @@
 
 @media only screen and (max-width: 768px) {
 	.navigation {
-		position: fixed;
-		width: 100%;
-		height: 100vh;
-		left: 0;
-		top: 0;
-		background-color: #ffffff;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
 
-		& > button {
+		&__close {
+			display: flex;
+		}
+
+		&__wrapper {
+			position: fixed;
+			width: 320px;
+			height: 100vh;
+			right: 0;
+			top: 0;
+			background-color: #ffffff;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			box-shadow: -2px 0 2px 0 rgb(0 0 0 / 10%);
+			transition: .3s;
+			transform: translateX(100%);
+		}
+
+		&--active {
+
+			.navigation__wrapper {
+				transform: translateX(0);
+			}
+		}
+
+		.navigation__link {
 			margin-bottom: 10px;
 			margin-right: 0;
 			max-width: 250px;
 			width: 100%;
 			display: block;
-		}
 
-		& > a {
-			max-width: 250px;
-			width: 100%;
+			& > a,
+			& > button {
+				width: inherit;
+				max-width: inherit;
+			}
 		}
 
 		&__nav {
