--- a/views/report.ejs
+++ b/views/report.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <title><%=title %></title>
     <meta charset="utf-8" />
@@ -67,66 +67,60 @@
 </head>
 <body>
 
-<header class="header">
-    <div class="header__title">
-        <h1 class="document__title"><%=title %></h1>
-    </div>
-    <div class="header__info">
-        <p>Дата: <%=date %></p>
-    </div>
-</header>
-<div class="clearfix"></div>
+    <header class="header">
+        <div class="header__title">
+            <h1 class="document__title"><%=title %></h1>
+        </div>
+        <div class="header__info">
+            <p>Дата: <%=date %></p>
+        </div>
+    </header>
+    <div class="clearfix"></div>
 
-<div class="table__wrapper">
+    <div class="table__wrapper">
 
-    <Table class="table">
-        <thead>
-        <tr>
-            <% for(var i = 0; i < headers.length; i++) {%>
-                <th>
-                    <%=headers[i] %>
-                </th>
-            <%} %>
-        </tr>
-        </thead>
-        <tbody>
-        <% for(var i = 0; i < data.length; i++) {%>
+        <Table class="table">
+            <thead>
             <tr>
-                <% for(var j = 0; j < data[i].length; j++) {%>
-                    <td>
-                        <% switch (data[i][j]) {
-                        case null: %>
-                        Отстуствует
-                        <% break;
-
-                        case 1: %>
-                        Есть
-                        <% break;
-
-                        case 0: %>
-                        Нет
-                        <% break;
-
-                        default: %>
-                        <%=data[i][j] %>
-                        <% break;
-
-                        } %>
-                    </td>
+                <% for(var i = 0; i < headers.length; i++) {%>
+                    <th>
+                        <%=headers[i] %>
+                    </th>
                 <%} %>
             </tr>
-        <%} %>
+            </thead>
+            <tbody>
+            <% for(var i = 0; i < data.length; i++) {%>
+                <tr>
+                    <% for(var j = 0; j < data[i].length; j++) {%>
+                        <td>
+                            <% switch (data[i][j]) {
+                            case null: %>
+                            Отстуствует
+                            <% break;
 
-        </tbody>
-    </Table>
+                            case 1: %>
+                            Есть
+                            <% break;
 
-</div>
+                            case 0: %>
+                            Нет
+                            <% break;
 
-<script type="text/javascript">
-  document.write ('<div>');
-  document.write (window.innerWidth);
-  document.write ('<\/div>');
-</script>
+                            default: %>
+                            <%=data[i][j] %>
+                            <% break;
+
+                            } %>
+                        </td>
+                    <%} %>
+                </tr>
+            <%} %>
+
+            </tbody>
+        </Table>
+
+    </div>
 
 </body>
 <html>
