--- a/views/report.ejs
+++ b/views/report.ejs
@@ -4,18 +4,27 @@
     <title><%=title %></title>
     <meta charset="utf-8" />
 
+
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
         * {
             box-sizing: border-box;
         }
 
-        body, html {
+        html {
+            font-weight: 400;
             width: 100%;
-            font-size: 14px;
         }
 
         body {
+            font-family: 'Roboto', sans-serif;
+            width: 100%;
+            line-height: 1.65;
+            font-size: 14px;
+            color: #000000;
             padding: 20px;
+            font-weight: 400;
         }
 
         .document__title {
@@ -66,6 +75,10 @@
             text-align: left;
             vertical-align: middle;
             border-radius: 2px;
+        }
+
+        .table tr td, .table tr th {
+            page-break-inside: avoid;
         }
 
     </style>
