--- a/views/report.ejs
+++ b/views/report.ejs
@@ -16,6 +16,7 @@
         html {
             font-weight: 400;
             width: 100%;
+            zoom: <%=zoom %>;
         }
 
         body {
