--- a/client/src/components/SearchFilter.scss
+++ b/client/src/components/SearchFilter.scss
@@ -4,6 +4,10 @@
 	left: 365px;
 	min-width: 280px;
 
+	.select-dropdown {
+		max-height: 500px;
+	}
+
 	&__select {
 		margin-bottom: 10px;
 		max-width: 280px;
